--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,7 @@
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.6" />
         <!--<server name="PANTHER_APP_ENV" value="test" />-->
         <!--<server name="KERNEL_CLASS" value="App\Kernel" force="true" />-->
-        <!--<env name="SYMFONY_DEPRECATIONS_HELPER" value="logFile=var/log/test_deprecations" />-->
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="logFile=var/log/test_deprecations" />
     </php>
 
     <testsuites>
